Bump version to 3.0.5
